5. Fix markets display to be visible for users who have a lot of assets, and fix trollbox overlap

--- a/app/styles/trader/sidenav/balances.less
+++ b/app/styles/trader/sidenav/balances.less
@@ -5,6 +5,7 @@ trader-balances {
   .widget();
   padding: 12px;
   margin-bottom: 12px;
+  max-height: 40%;
   .md-virtual-repeat-container .md-virtual-repeat-scroller {
     position: inherit;
   }
